--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,21 +10,21 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="static/MAF-autism.png" class="d-block w-100" alt="..." style="height: 660px;">
+      <img src="static/MAF-autism.png" class="d-block w-100" alt="..." style="height: 700px;">
       <div class="carousel-caption d-none d-md-block">
         <h5>First slide label</h5>
         <p>Some representative placeholder content for the first slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="static/download (1).jpeg" class="d-block w-100" alt="..." style="height: 660px;">
+      <img src="static/download (1).jpeg" class="d-block w-100" alt="..." style="height: 700px;">
       <div class="carousel-caption d-none d-md-block">
         <h5>Second slide label</h5>
         <p>Some representative placeholder content for the second slide.</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="static/download.jpeg" class="d-block w-100" alt="..." style="height: 660px;">
+      <img src="static/download.jpeg" class="d-block w-100" alt="..." style="height: 700px;">
       <div class="carousel-caption d-none d-md-block">
         <h5>Third slide label</h5>
         <p>Some representative placeholder content for the third slide.</p>
@@ -53,7 +53,7 @@
               <h5 class="card-title">Donations</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
             </div>
-            <div class="button">
+            <div class="button" style="align-self: center; padding-bottom: 4vh;">
               <button class="btn btn-primary" type="submit">Button</button>
             </div>
             <div class="card-footer">
@@ -68,6 +68,9 @@
               <h5 class="card-title">Volunteer</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             </div>
+            <div class="button" style="align-self: center; padding-bottom: 4vh;">
+              <button class="btn btn-primary" type="submit">Button</button>
+            </div>
             <div class="card-footer">
               <small class="text-body-secondary">Last updated 3 mins ago</small>
             </div>
@@ -79,6 +82,9 @@
             <div class="card-body">
               <h5 class="card-title">Advocacy</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="button" style="align-self: center; padding-bottom: 4vh;">
+              <button class="btn btn-primary" type="submit">Button</button>
             </div>
             <div class="card-footer">
               <small class="text-body-secondary">Last updated 3 mins ago</small>
