--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -10,42 +10,45 @@
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
       </head>
     <body>
+    <header class="d-flex flex-wrap justify-content-center py-3 ">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+        <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
+        <span class="fs-4">Psycle</span>
+      </a>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="height: 60px;">
-            <div class="container-fluid">
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{url_for('home')}}" style="font-size:larger;">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('about')}}" style="font-size:larger;">About</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size:larger;">
-                      Features
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="{{url_for('test')}}">Test</a></li>
-                      <li><a class="dropdown-item" href="#">Grow</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Forum</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size:larger;">
-                      Help Bot
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Patient</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Parent</a></li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-        </nav>
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{url_for('home')}}" style="font-size:larger;">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('about')}}" style="font-size:larger;">About Us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size:larger;">
+            Features
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{{url_for('autism_form')}}">Test</a></li>
+            <li><a class="dropdown-item" href="#">Grow</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Forum</a></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size:larger;">
+            Help Bot
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Patient</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Parent</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('login')}}" style="font-size:larger;">Login</a>
+        </li>
+      </ul>
+    </header>
 
         
           <div class="b-example-divider"></div>
@@ -53,157 +56,65 @@
           {% block content %}
           {% endblock %}
           
-          <!-- Footer -->
-          <footer class="bg-body-tertiary text-center">
-            <!-- Grid container -->
-            <div class="container p-4">
-              <!-- Section: Social media -->
-              <section class="mb-4">
-                <!-- Facebook -->
-                <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="#!" role="button"
-                  ><i class="fab fa-facebook-f"></i
-                ></a>
-
-                <!-- Twitter -->
-                <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="#!" role="button"
-                  ><i class="fab fa-twitter"></i
-                ></a>
-
-                <!-- Google -->
-                <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="#!" role="button"
-                  ><i class="fab fa-google"></i
-                ></a>
-
-                <!-- Instagram -->
-                <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="#!" role="button"
-                  ><i class="fab fa-instagram"></i
-                ></a>
-
-                <!-- Linkedin -->
-                <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="#!" role="button"
-                  ><i class="fab fa-linkedin-in"></i
-                ></a>
-
-                <!-- Github -->
-                <a data-mdb-ripple-init class="btn btn-outline btn-floating m-1" href="https://github.com/riyasachdeva04" role="button"
-                  ><i class="fab fa-github"></i
-                ></a>
-              </section>
-              <!-- Section: Social media -->
-
-
-              <!-- Section: Text -->
-              <section class="mb-4">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-                  repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam eum
-                  harum corrupti dicta, aliquam sequi voluptate quas.
-                </p>
-              </section>
-              <!-- Section: Text -->
-
-              <!-- Section: Links -->
-              <section class="">
-                <!--Grid row-->
-                <div class="row">
-                  <!--Grid column-->
-                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a class="text-body" href="#!">Link 1</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 2</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 3</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 4</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <!--Grid column-->
-
-                  <!--Grid column-->
-                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a class="text-body" href="#!">Link 1</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 2</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 3</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 4</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <!--Grid column-->
-
-                  <!--Grid column-->
-                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a class="text-body" href="#!">Link 1</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 2</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 3</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 4</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <!--Grid column-->
-
-                  <!--Grid column-->
-                  <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                    <h5 class="text-uppercase">Links</h5>
-
-                    <ul class="list-unstyled mb-0">
-                      <li>
-                        <a class="text-body" href="#!">Link 1</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 2</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 3</a>
-                      </li>
-                      <li>
-                        <a class="text-body" href="#!">Link 4</a>
-                      </li>
-                    </ul>
-                  </div>
-                  <!--Grid column-->
+          <div class="container">
+            <footer class="py-5">
+              <div class="row">
+                <div class="col-6 col-md-2 mb-3">
+                  <h5>Section</h5>
+                  <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                  </ul>
                 </div>
-                <!--Grid row-->
-              </section>
-              <!-- Section: Links -->
-            </div>
-            <!-- Grid container -->
-
-            <!-- Copyright -->
-            <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-              © 2023 Copyright:
-              <a class="text-reset fw-bold" href="https://github.com/riyasachdeva04">Made with love and care: Psycle</a>
-            </div>
-            <!-- Copyright -->
-          </footer>
-          <!-- Footer -->
+          
+                <div class="col-6 col-md-2 mb-3">
+                  <h5>Section</h5>
+                  <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                  </ul>
+                </div>
+          
+                <div class="col-6 col-md-2 mb-3">
+                  <h5>Section</h5>
+                  <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
+                  </ul>
+                </div>
+          
+                <div class="col-md-5 offset-md-1 mb-3">
+                  <form>
+                    <h5>Subscribe to our newsletter</h5>
+                    <p>Monthly digest of what's new and exciting from us.</p>
+                    <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+                      <label for="newsletter1" class="visually-hidden">Email address</label>
+                      <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
+                      <button class="btn btn-primary" type="button">Subscribe</button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+          
+              <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+                <p>© 2023 Company, Inc. All rights reserved.</p>
+                <ul class="list-unstyled d-flex">
+                  <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+                  <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+                  <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+                </ul>
+              </div>
+            </footer>
+          </div>
           
             
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
