--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,31 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autism Form</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="mb-4">Autism Form</h1>
-        <form method="post" action="{{ url_for('autism_form') }}">
-            {{ form.hidden_tag() }}
+{% extends "layout.html" %}
 
-            {% for field in form %}
-                <div class="form-group">
-                    <label for="{{ field.id }}">{{ field.label.text }}:</label>
-                    {{ field }}
-                    {% if field.errors %}
-                        <small class="text-danger">{{ field.errors[0] }}</small>
-                    {% endif %}
+{% block content %}
+<div class="container mt-5">
+    <div class="card">
+        <div class="card-body">
+            <h1 class="card-title mb-4">Checkpoint</h1>
+            <form method="post" action="{{ url_for('autism_form') }}">
+                {{ form.hidden_tag() }}
+                
+                {% for field in form %}
+                    <div class="form-group row">
+                        <label for="{{ field.id }}" class="col-sm-2 col-form-label">{{ field.label.text }}:</label>
+                        <div class="col-sm-4">
+                            {% if field.type == 'SelectField' %}
+                                <select class="form-control" id="{{ field.id }}" name="{{ field.name }}">
+                                    {% for option, label in field.choices %}
+                                        <option value="{{ option }}" {% if field.data == option %}selected{% endif %}>{{ label }}</option>
+                                    {% endfor %}
+                                </select>
+                            {% else %}
+                                {{ field(class="form-control") }}
+                            {% endif %}
+                        </div>
+                        
+                        {% if loop.index % 2 == 0 %}
+                            </div><div class="form-group row">
+                        {% endif %}
+                    </div>
+                {% endfor %}
+                
+                <div class="form-group row">
+                    <div class="col-sm-8 offset-sm-4">
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
                 </div>
-            {% endfor %}
-
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+            </form>
+        </div>
     </div>
-</body>
-</html>
-
-
+</div>
+{% endblock %}
