--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -29,7 +29,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{{url_for('autism_form')}}">Test</a></li>
-            <li><a class="dropdown-item" href="#">Grow</a></li>
+            <li><a class="dropdown-item" href="{{url_for('grow')}}">Grow</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Forum</a></li>
           </ul>
