--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
+        {% block styles %}
+        {% endblock %}
       </head>
     <body>
     <header class="d-flex flex-wrap justify-content-center py-3 ">
@@ -39,9 +41,9 @@
             Help Bot
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Patient</a></li>
+            <li><a class="dropdown-item" href="{{url_for('patient_bot')}}">Patient</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Parent</a></li>
+            <li><a class="dropdown-item" href="{{url_for('parent_bot')}}">Parent</a></li>
           </ul>
         </li>
         <li class="nav-item">
