--- a/app/templates/grow/layout.html
+++ b/app/templates/grow/layout.html
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="{{url_for('grow_dashboard')}}">Dashboard</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('grow_courses')}}">Courses</a>
+                    <a class="nav-link" href="{{url_for('grow_badges')}}">Badges</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('grow_analytics')}}">Analytics</a>
