--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,7 +31,7 @@
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{{url_for('autism_form')}}">Test</a></li>
-            <li><a class="dropdown-item" href="{{url_for('grow')}}">Grow</a></li>
+            <li><a class="dropdown-item" href="{{url_for('grow_dashboard')}}">Grow</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Forum</a></li>
           </ul>
@@ -120,7 +120,8 @@
           
             
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        
+        {% block scripts %}
+        {% endblock %}
     </body>
 </html>
 
