--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -32,8 +32,8 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{{url_for('autism_form')}}">Test</a></li>
             <li><a class="dropdown-item" href="{{url_for('grow_dashboard')}}">Grow</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Forum</a></li>
+            <!-- <li><hr class="dropdown-divider"></li> -->
+            <!-- <li><a class="dropdown-item" href="#">Forum</a></li> -->
           </ul>
         </li>
         <li class="nav-item dropdown">
