--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -2,10 +2,14 @@
 
 {% block content %}
 <div class="container mt-5">
+    <div class="alert alert-dark" role="alert">
+        {{alert_message}}
+    </div>
     <div class="card">
         <div class="card-body">
             <h1 class="card-title mb-4">Checkpoint</h1>
             <form method="post" action="{{ url_for('autism_form') }}">
+                
                 {{ form.hidden_tag() }}
                 
                 {% for field in form %}
