--- a/app/templates/grow/analytics.html
+++ b/app/templates/grow/analytics.html
@@ -1,5 +1,19 @@
 {% extends "grow/layout.html" %}
 
 {% block content2 %}
+<div class="col-sm-10">
+    <h1>My Dashboard</h1>
+    <hr>
 
+    <!-- Cards -->
+    <div class="card bg-light">
+        <div class="card-body">
+            <h4>ReadME</h4>
+            <h5>Hey There</h5>
+            <p>I love drawing and listening to music.</p>
+        </div>
+    </div>
+
+</div>
+</div>
 {% endblock content2 %}
